[tool.poetry]
name = "hh-test-project"
version = "0.1.0"
description = ""
authors = ["Vas <vas@va.va>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
alembic = "^1.10.2"
sqlalchemy = "^2.0.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "2.9.3"
asyncpg = "^0.27.0"
celery = "^5.3.0"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
